--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="student-list-root"></div> 
+    <div id="attendance-marking-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
