Teacher and student pages updated

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <div id="root"></div>
     <div id="student-list-root"></div> 
     <div id="attendance-marking-root"></div> 
+    <div id="attendance-viewing-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
