--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="root"></div>
     <div id="student-list-root"></div> 
+    <div id="batch-list-root"></div> 
     <div id="attendance-marking-root"></div> 
     <div id="attendance-viewing-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
