Addition of batches, students and teachers done

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,9 @@
     <div id="fee-root"></div> 
     <div id="attendance-marking-root"></div> 
     <div id="attendance-viewing-root"></div> 
+    <div id="batch-root"></div> 
+    <div id="student-root"></div> 
+    <div id="teacher-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
