Added popup feature

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <div id="batch-root"></div> 
     <div id="student-root"></div> 
     <div id="teacher-root"></div> 
+    <div id="popup-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
