Test view added in student

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <div id="root"></div>
     <div id="student-list-root"></div> 
     <div id="batch-list-root"></div> 
+    <div id="test-root"></div> 
     <div id="fee-root"></div> 
     <div id="attendance-marking-root"></div> 
     <div id="attendance-viewing-root"></div> 
