Student page done

--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="student-list-root"></div> 
+    <div id="modal-one-root"></div> 
+    <div id="modal-two-root"></div> 
+    <div id="modal-three-root"></div> 
+    <div id="modal-four-root"></div> 
     <div id="batch-list-root"></div> 
-    <div id="test-root"></div> 
-    <div id="fee-root"></div> 
     <div id="attendance-marking-root"></div> 
-    <div id="attendance-viewing-root"></div> 
     <div id="batch-root"></div> 
     <div id="student-root"></div> 
     <div id="teacher-root"></div> 
