Teacher page done

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <div id="modal-two-root"></div> 
     <div id="modal-three-root"></div> 
     <div id="modal-four-root"></div> 
-    <div id="batch-list-root"></div> 
+    <div id="modal-five-root"></div> 
     <div id="attendance-marking-root"></div> 
     <div id="batch-root"></div> 
     <div id="student-root"></div> 
