Added test controls for admin

--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,8 @@
     <div id="modal-three-root"></div> 
     <div id="modal-four-root"></div> 
     <div id="modal-five-root"></div> 
-    <div id="attendance-marking-root"></div> 
-    <div id="batch-root"></div> 
-    <div id="student-root"></div> 
-    <div id="teacher-root"></div> 
+    <div id="modal-six-root"></div> 
+    <div id="modal-seven-root"></div> 
     <div id="popup-root"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
